--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
 </header>
 
 <main>
-  <!-- 向日葵 -->
   <section>
     <h2>
-      <!-- 下载图标 -->
       <svg viewBox="0 0 24 24"><path d="M12 2l-7 7h4v10h6V9h4l-7-7zm-2 14v-4h4v4h-4z"/></svg>
       向日葵远程（AweSun）下载
     </h2>
@@ -38,10 +36,8 @@
     <a class="btn" href="https://dw.oray.com/sunlogin/windows/AweSun_15.8.4.20746_x64.exe" target="_blank" rel="noopener">推荐 64 位下载</a>
   </section>
 
-  <!-- 英文快修版 -->
   <section>
     <h2>
-      <!-- 工具图标 -->
       <svg viewBox="0 0 24 24"><path d="M22.7 19l-9.1-9.1c.9-2.3.4-5.1-1.5-7C11.3 1 10.6.8 9.9.8S8.5 1 8 .6C6.7 1.3 5.6 2.4 4.8 3.8c-1.5 2.5-1.5 5.7 0 8.2l9.1 9.1-2.1 2.1L2 13.7C-1.3 8.5 1.5 2 7.3 2c2.5 0 4.8 1 6.5 2.7 2.2 2.2 2.7 5.4 1.5 8.1l9.4 9.4-2.1 2.1z"/></svg>
       维修工具（英文快修版）
     </h2>
@@ -49,10 +45,8 @@
     <a class="btn" href="https://wwamt.lanzout.com/iZQqH3doen2f" target="_blank" rel="noopener">英文快修版下载</a> 提取码 <strong>8888</strong>
   </section>
 
-  <!-- 中文快修版 -->
   <section>
     <h2>
-      <!-- 中文图标 -->
       <svg viewBox="0 0 24 24"><path d="M12.9 4.2L11 2.3 9.1 4.2l1.9 1.9 1.9-1.9zM4.2 9.1L2.3 11l1.9 1.9L6.1 11 4.2 9.1zm15.6 0L19.9 11l1.9 1.9L21.7 11l-1.9-1.9zM12 6c-3.3 0-6 2.7-6 6s2.7 6 6 6 6-2.7 6-6-2.7-6-6-6zm0 10c-2.2 0-4-1.8-4-4s1.8-4 4-4 4 1.8 4 4-1.8 4-4 4zm-6-2.9L2.3 14l1.9 1.9 1.9-1.9-1.9-1.9zm15.6 0l-1.9 1.9 1.9 1.9 1.9-1.9-1.9-1.9zM12 16.9l-1.9 1.9 1.9 1.9 1.9-1.9-1.9-1.9z"/></svg>
       中文维修工具（中文快修版）
     </h2>
@@ -60,10 +54,8 @@
     <a class="btn" href="https://wwamt.lanzout.com/iIfGz3drge5e" target="_blank" rel="noopener">中文快修版下载</a> 提取码 <strong>8888</strong>
   </section>
 
-  <!-- 远程地址 -->
   <section>
     <h2>
-      <!-- 网络图标 -->
       <svg viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 17.93c-3.94-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L8 12v1c0 1.1.9 2 2 2v3.93zm9.6-2.23c-.26.85-.76 1.6-1.41 2.18l-1.54-1.54c.38-.49.63-1.09.63-1.78v-1h2c.21 0 .42.03.62.08-.1.58-.3 1.12-.6 1.62zM12 4c3.31 0 6 2.69 6 6 0 .73-.13 1.42-.35 2.06l-1.81-1.81C15.69 9.19 15.37 9 15 9c-.55 0-1 .45-1 1v1h-2V9c0-.55-.45-1-1-1s-1 .45-1 1v1H8V9c0-.55-.45-1-1-1-.37 0-.69.19-.88.47L4.35 7.41C4.13 6.77 4 6.08 4 5.35 4 3.69 5.69 2 7.35 2c1.52 0 2.89.83 3.64 2.09L12 4z"/></svg>
       远程技术员地址
     </h2>
@@ -78,7 +70,7 @@
 
 <script>
   document.getElementById('copyBtn').addEventListener('click', function () {
-    const addr = 'aa112211.a1.luyouxia.net:25550';
+    const addr = 'aa112211.f1.luyouxia.net:17717';
     navigator.clipboard.writeText(addr).then(() => {
       const o = this;
       const orig = o.textContent;
